<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_style"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_20"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/create_account_title"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            style="@style/text_14"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_account_desc"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/signup_name"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_40sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signup_contact"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_password"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signup_confirm_password"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup_signup"
            style="@style/button_16"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/signup_already_account"
            style="@style/text_14"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="@string/already_account" />

    </LinearLayout>

</ScrollView>