<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/bg_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/checkout_name"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_40sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/checkout_contact"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/checkout_email"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/checkout_address"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:gravity="start"
            android:hint="Address"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Spinner
            android:id="@+id/checkout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp" />

        <RadioGroup
            android:id="@+id/checkout_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkout_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cash On Delivery" />

            <RadioButton
                android:id="@+id/checkout_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Online" />

        </RadioGroup>

        <Button
            android:id="@+id/checkout_pay_now"
            style="@style/button_16"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Pay Now" />

    </LinearLayout>

</ScrollView>